--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <span>l</span>
         <span>a</span>
         <span>!</span>
+        <span>!</span>
+        <span>!</span>
     </div>
     <div class="description">
         <span>Te Amo Mi Estrellita, ¿TE GUSTARIA SER MI SAN VALENTIN?</span>
