--- a/index.html
+++ b/index.html
@@ -7,30 +7,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
-    <title>Flowers</title>
+    <title>REGALO</title>
 </head>
 
 <body>
     <div class="greetings">
-        <span>H</span>
-        <span>o</span>
-        <span>l</span>
-        <span>a</span>
-        <span>!</span>
-        <span>!</span>
+        <span>M</span>
+        <span>E</span>
+        <span>J</span>
+        <span>O</span>
+        <span>R</span>
+        <span> </span>
+        <span>T</span>
+        <span>A</span>
+        <span>R</span>
+        <span>D</span>
+        <span>E</span>
+        <span> </span>
+        <span>Q</span>
+        <span>U</span>
+        <span>E</span>
+        <span> </span>
+        <span>N</span>
+        <span>U</span>
+        <span>N</span>
+        <span>C</span>
+        <span>A</span>
         <span>!</span>
     </div>
     <div class="description">
-        <span>Te Amo Mi Estrellita, ¿TE GUSTARIA SER MI SAN VALENTIN?</span>
+        <span>Te quiero mucho mi querida Liz, lo siento por la tardanza pero espero te gusto el detalle!!!</span>
     </div>
     <div class="button">
         <button class="botones">
-            <a href="flower.html" style="color: #fff;">¡Presiona para ver algo!</a>
+            <a href="flower.html" style="color: #fff;">¡Presiona aqui!</a>
         </button>
     </div>
-
-    <!-- Créditos -->
-    
 </body>
 
 </html>
